--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="lesson">German</div>
                 <div class="lesson">History</div>
               </div>
-              <div class="wednsday">
+              <div class="wednesday">
                 <div class="lesson">Englisch</div>
                 <div class="lesson">French</div>
                 <div class="lesson">Math</div>
@@ -43,12 +43,28 @@
                 <div class="lesson">Math</div>
                 <div class="lesson">German</div>
                 <div class="lesson">Hand Work</div>
+                <p>item1</p>
+                <p>item2</p>
+                <p>item3</p>
               </div>
+              <ul>
+                <p>1423</p>
+              </ul>
+              <ul>
+                <p>1</p>
+                <p>2</p>
+                <p>3</p>
+                <p>4</p>
+                <p>5</p>
+                <p>6</p>
+                <p>7</p>
+                <p>8</p>
+                <p>9</p>
+                <p>10</p>
+              </ul>
         </div>
 
       </main>
 
 </body>
 </html>
-
-
